# DecNashPlanning

./: .gitignore  Project.toml  README.md  activate  install  pyproject.toml  requirements.txt
experiments/: animate.py  exp_wrapper.py  experiment.py  extract_state_at_frame.py  metrics.py  single_game.jl  single_game.py
src/: decnash.py
src/julia/: AlgamesRoundabout.jl  Project.toml  dynamics.jl  initialization.jl  plot.jl  solve.jl
